__pycache__ added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -108,4 +108,6 @@ fabric.properties
 # https://plugins.jetbrains.com/plugin/12206-codestream
 .idea/codestream.xml
 
+**/__pycache__
+
 # End of https://www.toptal.com/developers/gitignore/api/pycharm
