--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,24 +13,21 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.10]
 
     steps:
     - name: Checkout repo
       uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.x'
     - name: Display Python version
       run: python -c "import sys; print(sys.version)"
-    - name: Install package
-      run: python setup.py install
     - name: Install pytest
       run: |
         python -m pip install --upgrade pip
         pip install pytest
+    - name: Build package
+      run: python -m build
     - name: Run pytest tests
       run: pytest Milestone Project pt2/BlackJack/Tests/test*
